# homepage

./: .breakpoints  .replit  chslinks.txt  func.py  main.py  pyproject.toml  server.py
static/css/: pre_code.css
templates/: .html  404.html  about.html  base.html  base64.html  chs.html  example.html  home.html  introduce_mcserver.html  qrcode.html  testeverythings.html
templates/chs/: flappy.html  snakehome.html  snakemb.html  snakepc.html
templates/chs/ztype-data/: truyenkieu.html
